fix (form/TextArea): adjust overflow and resizing for better UX

--- a/packages/form/src/fields/TextArea/TextArea.scss
+++ b/packages/form/src/fields/TextArea/TextArea.scss
@@ -3,8 +3,10 @@
   max-height: 100%;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+
   resize: var(--resize-direction);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 textarea {
@@ -13,14 +15,16 @@ textarea {
   background: none;
   width: 100%;
   height: 100%;
+  min-height: 100%;
+  box-sizing: border-box;
+  margin: 0;
   padding: inherit;
   position: absolute;
   left: 0;
   top: 0;
-  box-sizing: border-box;
+
+  overflow: hidden;
   resize: none;
-  overflow-x: hidden;
-  overflow-y: auto;
 
   transition: opacity .2s;
   opacity: 1;
